# souris-gui-test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
souris_gui_test/: app.py  dash_app.py
souris_gui_test/assets/css/: common.css  style.css
souris_gui_test/components/: callbacks.py  layout.py  options.py
souris_gui_test/components/callbacks/: callbacks.py
souris_gui_test/components/inputs_controls/: evap_end.py  evap_start.py  inputs_controls.py  wateryear.py
souris_gui_test/components/navbar/: navbar.py
souris_gui_test/components/tabs/: __init__.py  discharge.py  graphs.py  met.py  reported_flows.py  reservoirs.py
souris_gui_test/data/: constants.py  test_data.py
souris_gui_test/modules/: dashboard.py  data_layer.py  models.py  server.py
souris_gui_test/utils/: constants.py
src/: app.py  dash_app.py  requirements.txt  test_code.py
src/app_data/: 2023_met_data.xlsx  real_time_data.csv  stations.py  test_data.py
src/assets/css/: bootstrap.css  common.css  custom.css  modals.css  navbar.css  style.css  uswds.css
src/components/: callbacks.py  custom_index.py  layout.py  options.py
src/components/callbacks/: callback_utils.py  callbacks.py
src/components/inputs_controls/: appor_end.py  appor_start.py  evap_end.py  evap_start.py  inputs_controls.py  met_station.py  wateryear.py
src/components/layout/: custom_index.py  layout.py
src/components/navbar/: navbar.py
src/components/tabs/: __init__.py  discharge.py  graphs.py  met.py  report.py  reported_flows.py  reservoirs.py  tabs.py
src/data/: stations.py
src/modules/: data_layer.py  data_utils.py  models.py  server.py  utils.py
src/modules/data_layer/: api_retrievers.py  caaq_download.py  data_layer.py  data_utils.py  download_api_services.py  model_inputs.py  nwis.py  trapz_integration.py  wo_realtime.py
src/modules/server/: models.py  server.py
src/modules/utils/: make_conditionals.py  utilities.py
src/rsconnect-python/: src.json
src/souris/core/: boxes.py  configs.py  core_meteo.py  core_reservoirs.py
src/souris/scripts/: souris_config.py  souris_main.py
src/souris/utils/: data_download.py  excel_writer.py  reservoir_capacity.py  services.py  utilities.py
src/souris_model/: souris_main.py
tests/: test_WaterOfficePartnerRealTime.py  test_boxes.py  test_data_layer.py  test_excel_writer.py  test_penman.py  test_reservoirs.py  test_test_data.py
tests/test_data/: real_time_data.csv  test_2023_met_data.csv  test_data.csv
(+56 files in other folders)
