[tool.poetry]
name = "src"
version = "0.1.0"
description = "Test gui for souris app"
authors = ["MooSee2 <52461645+MooSee2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.9.12"
dash = "^2.14.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
dash-bootstrap-components = "^1.5.0"
dash-mantine-components = "^0.12.1"
aiohttp = "^3.9.3"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.1.240316"
pytest = "^8.1.1"
black = "^24.3.0"
pre-commit = "^3.7.0"
isort = "^5.13.2"
poetry-plugin-export = "^1.7.1"
rsconnect-python = "^1.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 999

[tool.isort]
profile="black"